--- a/css/login.css
+++ b/css/login.css
@@ -210,3 +210,7 @@ html, body {
     filter: brightness(1.2);
     transition: filter 0.3s ease;
 }
+
+display: flex;
+    justify-content: space-between;
+    align-items: center;
