--- a/css/login.css
+++ b/css/login.css
@@ -1,5 +1,5 @@
 .loginpage {
-    background-image: url("../assets/tempbg.png");
+    background-image: url("../assets/bg.png");
     background-size: 100% 100%;
     background-repeat: no-repeat;
     background-position: center;
@@ -210,7 +210,3 @@ html, body {
     filter: brightness(1.2);
     transition: filter 0.3s ease;
 }
-
-display: flex;
-    justify-content: space-between;
-    align-items: center;
