--- a/css/signup.css
+++ b/css/signup.css
@@ -1,5 +1,5 @@
 .signuppage {
-    background-image: url("../assets/tempbg.png");
+    background-image: url("../assets/bg.png");
     background-size: 100% 100%;
     background-repeat: no-repeat;
     background-position: center;
