--- a/css/wallet.css
+++ b/css/wallet.css
@@ -161,7 +161,7 @@ html, body {
 }
 
 .wrapper {
-    position: relative; /* fix from 'absolute' */
+    position: relative;
     width: 100%;
     height: 100%;
     animation: pixelBounce 3s infinite ease-in-out;
@@ -190,9 +190,9 @@ html, body {
 }
 
 .savings {
-    position: absolute;         /* lock in place inside .wrapper */
-    top: 28vh;                  /* adjust to your desired vertical placement */
-    left: 51.6vw;                 /* stick to the right side visually */
+    position: absolute;
+    top: 28vh;                 
+    left: 51.6vw;                 
     width: 35.5vw;
     height: 45vh;
     background-color: #401268;
@@ -320,8 +320,8 @@ html, body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.6); /* darken background */
-  display: none; /* hidden by default */
+  background: rgba(0, 0, 0, 0.6);
+  display: none;
   justify-content: center;
   align-items: center;
   z-index: 999;
@@ -453,7 +453,7 @@ html, body {
     color: #5a4100;
     font-family: bodytext;
     font-size: 1.2vw;
-    border-radius: 0.6vw; /* adds curved edges */
-    outline: none; /* removes default black outline */
+    border-radius: 0.6vw;
+    outline: none;
     transition: border-color 0.2s ease;
 }
